My profile page

--- a/index.html
+++ b/index.html
@@ -1,42 +1,46 @@
+
 <!DOCTYPE html>
 <html>
-<head>
-  <title>My Profile Page</title>
-  <metaname="description">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet"href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
-</head>
-<body>
-  <div class="container">
+  <head>
+    <title>My Profile Page</title>
+    <metaname="description">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="images/GG_Profile_pic.jpg" href=" ">
+  </head>
+  <body>
+    <div class="container">
+      <div class="card">
 
-    <div class="card-white" id="introduction">
-      <h1>Gemma Gonputh</h1>
-      <img src="images/GG_Profile_pic.jpg" class="img-circle" width="60px" alt="">
-
-      <h2>Front-End Developer student | Analyst | Budding Entrepreneur</h2>
-      <p>I like front-end development, UX/UI Design, SQL, data analysis 🤓, property investment and travelling the world 🌎</p>
+      <h1>Gemma Gonputh </h1>
+        <img src="images/GG_Profile_pic.jpg" alt="Profile Pic" height="80" width="80">
+          <h2>| Full-Stack Developer | UI/UX Design | Analyst | </h2>
+        <p>I came from a financial background. However, after discovering my passion for web development, ux design and everything tech I have not looked back. After completing an intensive coding bootcamp and working as a freelancer, I look forward to bringing my passion and skills to a new role.
+      Feel free to contact me directly and have a look at my GitHub repositories: https://github.com/gemmage3. </p>
     </div>
-
-      <div class="card-grey" id="footer">
+    <div class="card">
     <h3>Follow Me</h3>
-    <ul class="list-inline">
-
-      <li><i class="fab fa-facebook-square"></i></li>
-      <li><a href="https://www.linkedin.com/in/gemmag123/" target="_blank">
-        <i class="fab fa-linkedin"></i></li>
+    <ul>
       <li>
-        <a href="https://www.instagram.com/gggemmaggg/" target="_blank">
-        <i class="fab fa-instagram"></i>
-      </a>
-    </li>
+        <a href="https://github.com/gemmage3" target="_blank">
+          <i class="fab fa-github"></i>
+        </a>
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/in/gemmag123/" target="_blank">
+          <i class="fab fa-linkedin"></i>
+         </a>
+      </li>
+      <li>
+        <a href="https://www.instagram.com/caramel_travellow/" target ="blank">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </li>
     </ul>
+      </div>
     </div>
-  </div>
-
-</body>
+  </body>
 
 </html>
 <!--end of file-->
-
